--- a/index.html
+++ b/index.html
@@ -12,34 +12,42 @@
     <meta name="description" content="服務10週年寵物葬儀社合法專業誠信。提供最專業的寵物禮儀規劃，給家人最透明精緻的價格與服務">
     <meta name="keywords" content="桃園寵物火化費用, 寵物火化價格表, 桃園免費寵物接送, 寵物冰存費用, 50公斤寵物火化, 兔子火化費用, 貓咪火化價格, 狗狗火化價錢, 合法寵物殯葬">
     
-    <meta property="og:title" content="心和寵物天堂 - 收費透明，讓愛圓滿">
+    <meta property="og:title" content="桃園心和寵物天堂 - 收費透明，讓愛圓滿">
     <meta property="og:description" content="團體火化1500起，個別火化4000起。桃園市區免接送費，提供15天免費冰存服務。">
     <meta property="og:image" content="https://hower484.github.io/Xinhe-Pet-Memorial/logo.png">
     <meta property="og:type" content="website">
 
     <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "LocalBusiness",
-      "name": "桃園心和寵物天堂",
-      "image": "https://hower484.github.io/Xinhe-Pet-Memorial/logo.png",
-      "telephone": "0976-320-093",
-      "priceRange": "$1500-$8000+",
-      "address": {
-        "@type": "PostalAddress",
-        "addressLocality": "桃園市",
-        "addressRegion": "桃園市",
-        "addressCountry": "TW"
-      },
-      "areaServed": ["Taoyuan City", "Taipei City", "New Taipei City", "Hsinchu City", "Hsinchu County"],
-      "openingHoursSpecification": {
-        "@type": "OpeningHoursSpecification",
-        "dayOfWeek": ["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"],
-        "opens": "00:00",
-        "closes": "23:59"
-      },
-      "url": "http://www.xinhe-pet.com.tw" 
-    }
+    [
+        {
+            "@context": "https://schema.org",
+            "@type": "WebSite",
+            "name": "桃園心和寵物天堂",
+            "url": "https://hower484.github.io/Xinhe-Pet-Memorial/"
+        },
+        {
+            "@context": "https://schema.org",
+            "@type": "LocalBusiness",
+            "name": "桃園心和寵物天堂",
+            "image": "https://hower484.github.io/Xinhe-Pet-Memorial/logo.png",
+            "telephone": "0976-320-093",
+            "priceRange": "$1500-$8000+",
+            "address": {
+                "@type": "PostalAddress",
+                "addressLocality": "桃園市",
+                "addressRegion": "桃園市",
+                "addressCountry": "TW"
+            },
+            "areaServed": ["Taoyuan City", "Taipei City", "New Taipei City", "Hsinchu City", "Hsinchu County"],
+            "openingHoursSpecification": {
+                "@type": "OpeningHoursSpecification",
+                "dayOfWeek": ["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"],
+                "opens": "00:00",
+                "closes": "23:59"
+            },
+            "url": "https://hower484.github.io/Xinhe-Pet-Memorial/" 
+        }
+    ]
     </script>
 
     <script src="https://cdn.tailwindcss.com"></script>
